fixed navbar alignment, font size, height of every project listed

--- a/react/src/assets/sass/helpers/_placeholders.scss
+++ b/react/src/assets/sass/helpers/_placeholders.scss
@@ -43,11 +43,11 @@
 %form-input {
   border: 1px solid $primary-color;
   background-color: transparent;
-  padding: 10px;
+  padding: 0.625rem;
   color: #fff;
   font-family: $secondary-font;
   letter-spacing: 2px;
-  margin: 10px 0px;
+  margin: 0.625rem 0px;
 }
 
 
